Fix bug where the horizontal gutter could be hidden behind the main panels

--- a/Nodexr/wwwroot/css/site.css
+++ b/Nodexr/wwwroot/css/site.css
@@ -216,6 +216,7 @@ app {
     flex-grow: 1;
     flex-shrink: 1;
     min-height: 0;
+    overflow: hidden;
 }
 
 .content {
